<?xml version="1.0" encoding="UTF-8"?>
<!-- JBoss, Home of Professional Open Source Copyright 2013, Red Hat, Inc. 
	and/or its affiliates, and individual contributors by the @authors tag. See 
	the copyright.txt in the distribution for a full listing of individual contributors. 
	Licensed under the Apache License, Version 2.0 (the "License"); you may not 
	use this file except in compliance with the License. You may obtain a copy 
	of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
	by applicable law or agreed to in writing, software distributed under the 
	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
	OF ANY KIND, either express or implied. See the License for the specific 
	language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<name>tuotehallinta</name>
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.jboss</groupId>
		<artifactId>jboss-parent</artifactId>
		<version>37</version>
	</parent>


	<groupId>fi.crowdcollective.tuotehallinta</groupId>
	<artifactId>tuotehallinta</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<distribution>repo</distribution>
			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
		</license>
	</licenses>
	<modules>
		<module>tuotehallinta-ejb</module>
		<module>tuotehallinta-web</module>
		<module>tuotehallinta-ear</module>
		<module>tuotehallinta-report-aggregate</module>
	</modules>

	<pluginRepositories>
		<pluginRepository>
			<id>jboss-public-maven-repository</id>
			<name>JBoss Public Maven Repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>redhat-ga-maven-repository</id>
			<name>Red Hat GA Maven Repository</name>
			<url>https://maven.repository.redhat.com/ga/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>central</id>
			<name>Maven Plugin Repository</name>
			<url>https://repo1.maven.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>


		<!-- Define the version of the JBoss BOMs we want to import to specify 
			tested stacks. -->
		<version.server.bom>26.1.2.Final</version.server.bom>
		<version.wildfly>26.1.2.Final</version.wildfly>

		<!-- maven-compiler-plugin -->
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven-dependency-plugin.version></maven-dependency-plugin.version>

		<resteasy.version>3.0.19.Final</resteasy.version>

		<!-- Sorry, but windows and git bash really mess things up.. -->
		<sonar.coverage.jacoco.xmlReportPaths>
    		${project.basedir}\..\tuotehallinta-report-aggregate\target\site\jacoco-aggregate\jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
		<arquillian-bom.version>1.6.0.Final</arquillian-bom.version>
		<wildfly-arquillian.version>3.0.1.Final</wildfly-arquillian.version>
		<maven-failsafe-plugin.version>3.0.0-M2</maven-failsafe-plugin.version>
	</properties>


	<dependencyManagement>
		<dependencies>
			<!-- Define the version of the EJB jar so that we don't need to repeat 
				ourselves in every module -->
			<dependency>
				<groupId>fi.crowdcollective.tuotehallinta</groupId>
				<artifactId>tuotehallinta-ejb</artifactId>
				<version>${project.version}</version>
				<type>ejb</type>
			</dependency>

			<!-- Define the version of the WAR so that we don't need to repeat ourselves 
				in every module -->
			<dependency>
				<groupId>fi.crowdcollective.tuotehallinta</groupId>
				<artifactId>tuotehallinta-web</artifactId>
				<version>${project.version}</version>
				<type>war</type>
				<scope>compile</scope>
			</dependency>

			<!--			<dependency>
				<groupId>fi.crowdcollective.tuotehallinta</groupId>
				<artifactId>tuotehallinta-report-aggregate</artifactId>
				<version>${project.version}</version>
				<type>pom</type>
			</dependency>
-->

			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-jakartaee8-with-tools</artifactId>
				<version>${version.server.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${arquillian-bom.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- The WildFly plug-in deploys your ear to a local JBoss EAP container. 
				Due to Maven's lack of intelligence with EARs we need to configure the WildFly 
				Maven plug-in to skip deployment for all modules. We then enable it specifically 
				in the ear module. -->
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-maven-plugin</artifactId>
				<version>2.0.2.Final</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- Allow Mockito to create mocks in Java > 8 -->
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<!-- Allow Mockito to create mocks in Java > 8 -->
						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
						<!--						<systemProperties>
							<property>
								<name>jersey.config.test.container.port</name>
								<value>4410</value>
							</property>
						</systemProperties>  -->
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>
</project>

